force-app/main/default/objects/Compensation_Matrix__c/Compensation_Matrix__c.object-meta.xml
<CustomObject>
    <label>Compensation Matrix</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Compensation Matrix No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensation Matrix</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>