force-app/main/default/objects/Compensation_Matrix__c/fields/Compensation_Category__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Category__c</fullName>
    <label>Compensation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compensation_Category</valueSetName>
    </valueSet>
</CustomField>