force-app/main/default/objects/Compensation_Matrix__c/fields/Compensation_in_Mileages__c.field-meta.xml
<CustomField>
    <fullName>Compensation_in_Mileages__c</fullName>
    <label>Compensation in Mileages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>