force-app/main/default/objects/Compensation_Matrix__c/fields/Compensation_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Scenario__c</fullName>
    <label>Compensation Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compensation_Scenario</valueSetName>
    </valueSet>
</CustomField>