force-app/main/default/objects/Compensation_Matrix__c/fields/Flight_Hours__c.field-meta.xml
<CustomField>
    <fullName>Flight_Hours__c</fullName>
    <label>Flight Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flight_Hours</valueSetName>
    </valueSet>
</CustomField>