force-app/main/default/objects/Compensation_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Compensation_Category__c</columns>
    <columns>Compensation_Scenario__c</columns>
    <columns>Class__c</columns>
    <columns>Flight_Hours__c</columns>
    <columns>Currency__c</columns>
    <columns>Compensation_Amount__c</columns>
    <columns>Compensation_in_Mileages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>